--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3.8'
 services:
 
+  tracing_web:
+    build: .
+    #environment:
+    # - PORT=3000
+    ports:
+      - "3000:3000"
+    networks:
+      - tracing_web_net
+
   jaeger:
     image: jaegertracing/all-in-one:1.55
     environment:
@@ -17,3 +26,11 @@ services:
       - "4317:4317"
       - "14250:14250"
       - "14269:14269"
+    networks:
+      - tracing_web_net
+
+networks:
+  tracing_web_net:
+
+
+
